chore(docs): ripple + fix demos fullscreen code overflow

--- a/src/gatsby/assets/styles/_demo.less
+++ b/src/gatsby/assets/styles/_demo.less
@@ -138,6 +138,10 @@ pre {
       overflow-y: auto;
       .overflow-style(@mode: none);
     }
+    .gatsby_demo_item.active-code {
+      overflow-x: hidden;
+      overflow-y: hidden;
+    }
     .gatsby_demo_tabs_right {
       > * {
         opacity: 1 !important;
